objects/kugo2p__SalesOrderAdditionalChargeCredit__c.object
<CustomObject>
    <description>Kugamon - Related object to Order for Order Charges and Credits.</description>
    <fields>
        <fullName>kugo2p__AccountingGroup__c</fullName>
        <label>Accounting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sale</fullName>
                </value>
                <value>
                    <fullName>Consumer Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Sale</fullName>
                </value>
                <value>
                    <fullName>Reseller Sale</fullName>
                </value>
                <value>
                    <fullName>Partner Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCreditAmount__c</fullName>
        <formula>round(kugo2p__SalesPrice__c * kugo2p__Quantity__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Charge/Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCredit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Additional Charge/Credit</label>
        <referenceTo>kugo2p__AdditionalChargeCredit__c</referenceTo>
        <relationshipLabel>Order Additional Charges/Credits</relationshipLabel>
        <relationshipName>Sales_Order_Additional_Charges_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AppliedPaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Applied Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__BalanceDueAmount__c</fullName>
        <formula>round(kugo2p__NetAmount__c -  kugo2p__AppliedPaymentAmount__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineDescription__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Line__c</fullName>
        <formula>Right(&apos;00&apos; + TEXT(kugo2p__SortOrder__c), 3)&amp;&quot; &quot;&amp;HYPERLINK(&quot;/&quot; + Id,  &quot;Detail&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__NetAmount__c</fullName>
        <formula>round(kugo2p__AdditionalChargeCreditAmount__c + kugo2p__TaxAmount__c + kugo2p__VATAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__OpportunityLineItemId__c</fullName>
        <description>References the Opportunity Product Line of the related Opportunity associated with the Order for the particular Order Additional Charge/Credit.</description>
        <inlineHelpText>References the Opportunity Product Line of the related Opportunity associated with the Order for the particular Order Additional Charge/Credit</inlineHelpText>
        <label>Opportunity Line Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Order Additional Charges/Credits</relationshipLabel>
        <relationshipName>Sales_Order_Additional_Charges_Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <label>Record Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxAmount__c</fullName>
        <formula>round(( kugo2p__AdditionalChargeCreditAmount__c *  kugo2p__TaxSalesRate__c ) +
( kugo2p__AdditionalChargeCreditAmount__c *  kugo2p__TaxExciseRate__c ) +
( kugo2p__AdditionalChargeCreditAmount__c *  kugo2p__TaxUsageRate__c ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxExciseRate__c</fullName>
        <label>Tax Excise Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxLocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tax Location</label>
        <referenceTo>kugo2p__TaxLocation__c</referenceTo>
        <relationshipLabel>Order Additional Charges/Credits</relationshipLabel>
        <relationshipName>Sales_Order_Additional_Charges_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxSalesRate__c</fullName>
        <label>Tax Sales Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxUsageRate__c</fullName>
        <label>Tax Usage Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxVAT__c</fullName>
        <formula>IF(
  OR(
    kugo2p__TaxAmount__c &gt; 0,
    kugo2p__VATAmount__c &gt; 0
  ),
  &apos;Yes&apos;,
  &apos;No&apos;
)</formula>
        <label>Tax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableSales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable VAT/GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATAmount__c</fullName>
        <formula>round(kugo2p__AdditionalChargeCreditAmount__c  *  kugo2p__VATRate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATRate__c</fullName>
        <label>VAT/GST Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__VAT__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>VAT/GST</label>
        <referenceTo>kugo2p__VAT__c</referenceTo>
        <relationshipLabel>Order Additional Charges/Credits</relationshipLabel>
        <relationshipName>Sales_Order_Additional_Charges_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__WebOrderAdditionalChargeCredit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Order Additional Charge/Credit</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Additional Charge/Credit</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Order Additional Charge/Credit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Additional Charges/Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>